--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ body a:hover {
 .item{ /*feint bg for work items*/
 	background-color:rgba(200,200,200,0.2);
 	padding:5px;
+	margin:0px;
 
 }
 .align_left {
